# Ancient_PDF-Master

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  setup_mac.py
electron/main/: index.js  preload.js  python-bridge.js
electron/renderer/: index.html  renderer-interaction.js  renderer-logic.js  renderer.js
electron/renderer/styles/: main.css
scripts/: build_dmg.sh  install-mac.sh  run-dev.sh
src/ancient_pdf_master/: app.py  bridge.py  gui.py  language.py  ocr_engine.py  pdf_builder.py  preprocess.py  training.py  worker.py  zone_ocr.py
tests/: test_preprocess.py  test_training.py
