[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ancient-pdf-master"
version = "1.0.0"
description = "OCR tool for Ancient Greek, Latin, and English texts with searchable PDF output"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "pdf2image>=1.16",
    "pikepdf>=8.0",
    "reportlab>=4.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
]
packaging = [
    "py2app>=0.28",
]

[project.gui-scripts]
ancient-pdf-master = "ancient_pdf_master.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
